# cmd/api/docs/swagger.json
@@ -1402,7 +1402,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.ExpenseDateRequest"
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
                         }
                     },
                     {
@@ -1715,7 +1715,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.ExpenseBuyDateRequest"
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
                         }
                     },
                     {
@@ -2028,7 +2028,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.IncomeDateRequest"
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
                         }
                     },
                     {
@@ -2341,7 +2341,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.IncomeSportsCourtsDateRequest"
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
                         }
                     },
                     {
@@ -4323,7 +4323,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/schemas.RegisterInformRequest"
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
                         }
                     }
                 ],
@@ -4401,6 +4401,87 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/schemas.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Response"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/report/get_by_date": {
+            "post": {
+                "security": [
+                    {
+                        "CookieAuth": []
+                    }
+                ],
+                "description": "Obtiene un reporte por fechas",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Report"
+                ],
+                "summary": "ReportGetByDate",
+                "parameters": [
+                    {
+                        "description": "Rango de fechas",
+                        "name": "dateRangeRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/schemas.DateRangeRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/schemas.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "$ref": "#/definitions/schemas.ReportMovementResponse"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -5772,6 +5853,23 @@
                 }
             }
         },
+        "schemas.DateRangeRequest": {
+            "type": "object",
+            "required": [
+                "from_date",
+                "to_date"
+            ],
+            "properties": {
+                "from_date": {
+                    "type": "string",
+                    "example": "2022-01-01"
+                },
+                "to_date": {
+                    "type": "string",
+                    "example": "2022-12-31"
+                }
+            }
+        },
         "schemas.DepositResponse": {
             "type": "object",
             "properties": {
@@ -5851,19 +5949,6 @@
                 }
             }
         },
-        "schemas.ExpenseBuyDateRequest": {
-            "type": "object",
-            "properties": {
-                "from_date": {
-                    "type": "string",
-                    "example": "2022-01-01"
-                },
-                "to_date": {
-                    "type": "string",
-                    "example": "2022-12-31"
-                }
-            }
-        },
         "schemas.ExpenseBuyResponse": {
             "type": "object",
             "properties": {
@@ -5935,19 +6020,6 @@
                 "total": {
                     "type": "number",
                     "example": 1000
-                }
-            }
-        },
-        "schemas.ExpenseDateRequest": {
-            "type": "object",
-            "properties": {
-                "from_date": {
-                    "type": "string",
-                    "example": "2022-01-01"
-                },
-                "to_date": {
-                    "type": "string",
-                    "example": "2022-12-31"
                 }
             }
         },
@@ -6044,19 +6116,6 @@
                         "transferencia"
                     ],
                     "example": "efectivo|tarjeta|transferencia"
-                }
-            }
-        },
-        "schemas.IncomeDateRequest": {
-            "type": "object",
-            "properties": {
-                "from_date": {
-                    "type": "string",
-                    "example": "2022-01-01"
-                },
-                "to_date": {
-                    "type": "string",
-                    "example": "2022-12-31"
                 }
             }
         },
@@ -6213,19 +6272,6 @@
                 "sports_court_id": {
                     "type": "integer",
                     "example": 1
-                }
-            }
-        },
-        "schemas.IncomeSportsCourtsDateRequest": {
-            "type": "object",
-            "properties": {
-                "from_date": {
-                    "type": "string",
-                    "example": "2022-01-01"
-                },
-                "to_date": {
-                    "type": "string",
-                    "example": "2022-12-31"
                 }
             }
         },
@@ -6805,29 +6851,55 @@
                 }
             }
         },
-        "schemas.RegisterInformRequest": {
-            "type": "object",
-            "required": [
-                "from_date",
-                "to_date"
-            ],
-            "properties": {
-                "from_date": {
-                    "type": "string",
-                    "example": "2022-01-01"
-                },
-                "to_date": {
-                    "type": "string",
-                    "example": "2022-12-31"
-                }
-            }
-        },
         "schemas.RegisterOpen": {
             "type": "object",
             "properties": {
                 "open_amount": {
                     "type": "number",
                     "example": 100
+                }
+            }
+        },
+        "schemas.ReportCount": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "number"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "group": {
+                    "type": "string"
+                }
+            }
+        },
+        "schemas.ReportMovementResponse": {
+            "type": "object",
+            "properties": {
+                "expense": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ReportCount"
+                    }
+                },
+                "expense_buy": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ReportCount"
+                    }
+                },
+                "income": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ReportCount"
+                    }
+                },
+                "income_sports_courts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/schemas.ReportCount"
+                    }
                 }
             }
         },
