# cmd/api/routes/report.go
@@ -8,5 +8,5 @@ import (
 func ReportRoutes(app *fiber.App, controllers *controllers.ReportController) {
 	report := app.Group("/api/v1/report")
 	report.Get("/get", controllers.ReportExcelGet)
-	report.Get("/get_month", controllers.ReportMonthGet)
+	report.Post("/get_by_date", controllers.ReportMovementByDate)
 }
