# internal/schemas/expense.go
@@ -55,26 +55,3 @@ type ExpenseSimpleResponseDTO struct {
 	CreatedAt     time.Time     `json:"created_at"`
 }
 
-type ExpenseDateRequest struct {
-	FromDate string `json:"from_date" example:"2022-01-01"`
-	ToDate   string `json:"to_date" example:"2022-12-31"`
-}
-
-func (r *ExpenseDateRequest) GetParsedDates() (time.Time, time.Time, error) {
-	loc, _ := time.LoadLocation("America/Argentina/Buenos_Aires")
-
-	from, err := time.ParseInLocation("2006-01-02", r.FromDate, loc)
-	if err != nil {
-		return time.Time{}, time.Time{}, ErrorResponse(422, "error al parsear la fecha de inicio", err)
-	}
-
-	to, err := time.ParseInLocation("2006-01-02", r.ToDate, loc)
-	if err != nil {
-		return time.Time{}, time.Time{}, ErrorResponse(422, "error al parsear la fecha de fin", err)
-	}
-
-	from = time.Date(from.Year(), from.Month(), from.Day(), 0, 0, 0, 0, from.Location())
-	to = time.Date(to.Year(), to.Month(), to.Day(), 23, 59, 59, int(time.Second-time.Nanosecond), to.Location())
-
-	return from, to, nil
-}
